# embree-benchmark-protoray

./: CMakeLists.txt  LICENSE.txt  README.md
accel/embree/: embree_intersector.cpp  embree_intersector.h  embree_intersector_packet.h  embree_intersector_single.h  embree_intersector_stream.h  embree_intersector_stream_aos.h
accel/optix/: optix_intersector_stream_cuda.cpp  optix_intersector_stream_cuda.h
benchmark/: artdeco.view  bench-cpugpu.sh  mazda.view  powerplant.view  sanmiguel.view  scenes.txt  villa.view
camera/: camera.h  camera_cuda.h  pinhole_camera.h  pinhole_camera_cuda.cuh  pinhole_camera_cuda.h  thin_lens_camera.h  thin_lens_camera_cuda.cuh  thin_lens_camera_cuda.h
cmake/: FindTBB.cmake
core/: intersector.h  intersector_cuda.cuh  intersector_packet.h  intersector_single.h  intersector_stream.h  intersector_stream_aos.h  intersector_stream_cuda.h  post_intersector.h  ray.h  ray_cuda.cuh  ray_embree.h  ray_simd.h  ray_stats.h  ray_stream.h  ray_stream_aos.h  shading_context.h  shading_context_cuda.cuh
geometry/: quad.h  shape.h  triangle.cpp  triangle.h  triangle_mesh.cpp  triangle_mesh.h  triangle_mesh_builder.cpp  triangle_mesh_builder.h  triangle_mesh_cuda.cuh  triangle_mesh_cuda.h  triangle_soup.cpp  triangle_soup.h  vertex.h
image/: accum_buffer.h  accum_buffer_cuda.cu  accum_buffer_cuda.h  color.h  frame_buffer.cpp  frame_buffer.h  frame_buffer_cuda.cpp  frame_buffer_cuda.h  image.cpp  image.h  image_io.cpp  image_io.h  linear_tone_mapper.h  morton.cpp  morton.h  pixel.cpp  pixel.h  reinhard_tone_mapper.h  surface.h  tone_mapper.h
main/: main.cpp  main.h
main/render/: input.h  render.cpp  render_window.cpp  render_window.h  stats_recorder.cpp  stats_recorder.h  view.cpp  view.h  window.cpp  window.h
math/: basis3.h  box1.h  box2.h  box3.h  fast_box3.h  fast_random.h  fast_random_simd.h  hash.h  math.cuh  math.h  math_avx.h  math_common.h  random.h  simd.h  simd_common.cpp  simd_common.h  vec2.h  vec3.h  vec4.h
math/simd/: vbool16_avx.h  vbool16_avx512.h  vbool4_avx.h  vbool8_avx.h  vfloat16_avx.h  vfloat16_avx512.h  vfloat4_avx.h  vfloat8_avx.h  vint16_avx.h  vint16_avx512.h  vint4_avx.h  vint8_avx.h  vint8_avx2.h
render/: ao_common_renderer_stream_aos.h  ao_hit_integrator_single.h  ao_integrator_packet.h  ao_integrator_single.h  ao_renderer_stream.h  ao_renderer_stream_aos.h  debug_integrator_single.h  device.h  device_cpu.cpp  device_cpu.h  device_cpu_impl.cpp  device_cpu_impl.h  device_cuda.cpp  device_cuda.h  diffuse2_integrator_packet.h  diffuse2_integrator_single.h  diffuse2_renderer_cuda.cu  diffuse2_renderer_cuda.h  diffuse2_renderer_stream.h  diffuse2_renderer_stream_aos.h  diffuse_integrator_packet.h  diffuse_integrator_single.h  diffuse_renderer_cuda.cu  diffuse_renderer_cuda.h  diffuse_renderer_stream.h  diffuse_renderer_stream_aos.h  integrator.h  intersector_factory_packet.cpp  intersector_factory_packet.h  intersector_factory_single.cpp  intersector_factory_single.h  intersector_factory_stream.h  intersector_factory_stream_aos.h  po_integrator_packet.h  po_integrator_single.h  primary_integrator_packet.h  primary_integrator_single.h  primary_renderer_cuda.cu  primary_renderer_cuda.h  primary_renderer_stream.h  (+19 more)
sampling/: random_sampler.cuh  random_sampler.h  random_sampler_simd.h  shape_sampler.cuh  shape_sampler.h
scripts/: bench-cpugpu.sh
sys/: array.h  atomic.h  blob.h  buffer_cuda.h  common.cuh  common.h  condition.h  constants.h  cuda.h  file.cpp  file.h  filesystem.cpp  filesystem.h  fixed_hash_map.h  lock_guard.h  logging.cpp  logging.h  mapped_file.cpp  mapped_file.h  memory.cpp  memory.h  memory_cuda.h  mutex.h  option.cpp  option.h  props.h  raw_array.h  ref.h  static_array.h  stream.h  string.cpp  string.h  sysinfo.cpp  sysinfo.h  tasking.cpp  tasking.h  text_reader.cpp  text_reader.h  tick_counter.h  timer.h  (+2 more)
